--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,13 @@
 	      <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
 	      <version>2.8.1</version>
 	   </dependency>
+	   
+	   <dependency>
+		  <groupId>org.mockito</groupId>
+		  <artifactId>mockito-core</artifactId>
+		  <version>4.8.1</version>
+		  <scope>test</scope>
+		</dependency>
 
     </dependencies>
 
